samples/_failures_safe/1761179652_ebe4ac_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_117aa78d.c: In function ‘tokenize’:
./samples/SAFE/__tmp_117aa78d.c:174:15: error: expected ‘;’ at end of input
  174 |         tokens
      |               ^
      |               ;
./samples/SAFE/__tmp_117aa78d.c:174:9: error: expected declaration or statement at end of input
  174 |         tokens
      |         ^~~~~~
./samples/SAFE/__tmp_117aa78d.c:174:9: error: expected declaration or statement at end of input
